# discord-bot-made-with-toru

./: main.py  pyproject.toml  request.py  run
bot/: __main__.py  plugin.py
bot/plugins/: avatar.py  crypto.py  dictionary.py  ping.py  snipe.py  summon.py  waifu.py  weather.py
