[project]
name = "discord-bot-made-with-toru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "disnake[speed]>=2.12.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",    # builtin-attribute-shadowing
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN201",  # missing-return-type-undocumented-public-function
    "ARG002",  # unused-method-argument
    "BLE",     # flake8-blind-except
    "C90",     # mccabe
    "COM812",  # missing-trailing-comma
    "D1",      # pydocstyle Missing Docstrings
    "D203",    # one-blank-line-before-class
    "D205",    # blank-line-after-summary
    "D213",    # multi-line-summary-second-line
    "E731",    # lambda-assignment
    "EM",      # flake8-errmsg
    "FBT",     # flake8-boolean-trap
    "INP",     # flake8-no-pep420
    "INT",     # flake8-gettext
    "N818",    # error-suffix-on-exception-name
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "RUF001",  # ambiguous-unicode-character-string
    "S311",    # suspicious-non-cryptographic-random-usage
    "S603",    # subprocess-without-shell-equals-true
    "S607",    # start-process-with-partial-path
    "SLF",     # flake8-self
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "TRY400",  # error-instead-of-exception
]
unfixable = [
    "COM819", # prohibited-trailing-comma
    "F401",   # unused-import
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["json", "orjson"]

[tool.ruff.lint.isort]
classes = ["clean_content"]

[tool.ruff.lint.pep8-naming]
ignore-names = []
